--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "author",
     "license": "ISC",
     "dependencies": {
+        "quill": "^1.3.6",
         "react": "^16.3.1",
         "react-dom": "^16.3.1",
         "react-router-dom": "^4.2.2"
